# coreshub-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
coreshub/: SKILL.md
coreshub/scripts/: container.py  epfs.py  imaas.py  inference.py  training.py
coreshub/scripts/utils/: settings.py  signature.py  zones.py
