[project]
name = "coreshub-skills"
version = "0.1.0"
description = "CoreshHub platform resource management skills for AI coding agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CoreshHub Team" }]
license = { text = "MIT" }
keywords = ["coreshub", "skill", "ai-agent", "cli"]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://www.coreshub.cn/"
Repository = "https://github.com/coreshub/coreshub-skills"

# 注册 CLI 入口点，安装后可直接在终端调用
[project.scripts]
coreshub-epfs       = "coreshub.scripts.epfs:cli"
coreshub-container  = "coreshub.scripts.container:cli"
coreshub-training   = "coreshub.scripts.training:cli"
coreshub-inference  = "coreshub.scripts.inference:cli"
coreshub-imaas      = "coreshub.scripts.imaas:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coreshub"]
